Feat: finished Schedule CRUD